add solution to stage 3