@@ -4,8 +4,9 @@ import ok.dht.ServiceConfig;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.IOException;
 import java.nio.file.Files;
-import java.util.Collections;
+import java.util.List;
 
 public final class MyServer {
     private static final Logger LOG = LoggerFactory.getLogger(
@@ -17,20 +18,40 @@ public final class MyServer {
     }
     
     public static void main(String[] args) {
+        if (args.length != 1 || args[0] != null || !isRightInteger(args[0])) {
+            LOG.error("Wrong args, arg must contain port");
+            return;
+        }
+        
+        int port = Integer.parseInt(args[0]);
+        String url = "http://localhost:" + port;
+        ServiceConfig cfg;
+        
         try {
-            int port = 3000;
-            String url = "http://localhost:" + port;
-            
-            ServiceConfig cfg = new ServiceConfig(
+            cfg = new ServiceConfig(
                     port,
                     url,
-                    Collections.singletonList(url),
-                    Files.createTempDirectory("server")
+                    List.of("http://localhost:3000", "http://localhost:3020", "http://localhost:3030"),
+                    Files.createTempDirectory("server-" + port)
             );
-            
+        } catch (IOException e) {
+            LOG.error("Can't create dir for db: " + e.getMessage());
+            return;
+        }
+        
+        try {
             new MyServiceImpl(cfg).start().get();
         } catch (Exception e) {
             LOG.error(e.getMessage());
+        }
+    }
+    
+    private static boolean isRightInteger(String s) {
+        try {
+            int result = Integer.parseInt(s);
+            return result > 0 && result <= 9999;
+        } catch (NumberFormatException | NullPointerException e) {
+            return false;
         }
     }
 }
